--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,8 +1,56 @@
+header {
+    background-color: beige;
+    text-align: center;
+}
+
+header img {
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+}    
+
 h1 {
     color: black
 }
 
-li {
+nav ul li {
     display: inline;
     margin-right: 20px;
+}
+
+h2 {
+    text-align: center;
+}
+
+.to-go {
+    text-align: center;
+}
+
+img {
+    display: block;
+    width: 200px;
+    height: 200px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#menu {
+    background-color: bisque;
+}
+
+main {
+    background-color: aqua;
+    text-align: center;
+}
+
+#Appetizers {
+    background-color: red;
+}
+
+#Entrees {
+    background-color: yellow;
+}
+
+#Beverages {
+    background-color: green;
 }
