--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,5 +1,9 @@
-header {
-    background-color: beige;
+html {
+    scroll-behavior: smooth;
+}
+
+    header {
+    background-color: #ad5314;
     text-align: center;
 }
 
@@ -10,12 +14,31 @@ header img {
 }    
 
 h1 {
-    color: black
+    color: white;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+}
+
+nav a:hover {
+    background: white;
+    color: blue
 }
 
 nav ul li {
     display: inline;
     margin-right: 20px;
+}
+
+.menu-nav a {
+    color: black;
+}
+
+.menu-nav a:hover {
+    background: white;
+    color: blue
 }
 
 h2 {
@@ -32,6 +55,7 @@ img {
     height: 200px;
     margin-right: auto;
     margin-left: auto;
+    border-radius: 40%;
 }
 
 #menu {
@@ -39,18 +63,18 @@ img {
 }
 
 main {
-    background-color: aqua;
+    background-color: #ad5314;
     text-align: center;
 }
 
 #Appetizers {
-    background-color: red;
+    background-color: bisque;
 }
 
 #Entrees {
-    background-color: yellow;
+    background-color: bisque;
 }
 
 #Beverages {
-    background-color: green;
+    background-color: #89CFF0;
 }
