--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -5,6 +5,7 @@ html {
     header {
     background-color: #ad5314;
     text-align: center;
+    padding-bottom: 20px;
 }
 
 header img {
@@ -26,10 +27,30 @@ nav a:hover {
     background: white;
     color: blue
 }
-
+nav ul {
+    padding-bottom: 20px;
+}
 nav ul li {
     display: inline;
     margin-right: 20px;
+    border-style: solid;
+    border-color: white;
+}
+
+#menu h2 {
+    padding-top: 20px;
+}
+
+#Appetizers h2 {
+    padding-top: 20px;
+}
+
+#Entrees h2 {
+    padding-top: 20px;
+}
+
+#Beverages h2 {
+    padding-top: 20px;
 }
 
 .menu-nav a {
