--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -12,6 +12,8 @@ header img {
     margin-left: auto;
     margin-right: auto;
     width: auto;
+    height: 300px;
+    width: 300px
 }    
 
 h1 {
@@ -34,7 +36,9 @@ nav ul li {
     display: inline;
     margin-right: 20px;
     border-style: solid;
-    border-color: white;
+    border-color:white;
+    border-radius: 5px;
+    border-width: 2px;
 }
 
 #menu h2 {
@@ -90,12 +94,16 @@ main {
 
 #Appetizers {
     background-color: bisque;
+    padding-bottom: 20px;
 }
 
 #Entrees {
     background-color: bisque;
+    padding-bottom: 20px;
 }
 
 #Beverages {
     background-color: #89CFF0;
+    padding-bottom: 20px;
 }
+
