--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -107,3 +107,8 @@ main {
     padding-bottom: 20px;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: auto;
+}
